# RSI_MACD_Futures_Backtesting

./: .gitignore  LICENSE  README.md  pyproject.toml
src/zrsimacd/: __init__.py  cli.py
src/zrsimacd/scripts/: analiz_danniv_v11_Finalv1.py  analiz_trades_report_END.py  futures_expire_order.py  main_data_parser.py  rsi_and_macd_calculation_V3.py
